Modification des chemin des feuilles de style

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Accueil | mthillayisnard.fr</title>
-        <link rel="stylesheet" href="style-index.css">
+        <link rel="stylesheet" href="/data/style/style-index.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
         <button id="return_button" class="return_button" onclick="window.location.href='https://mthillayisnard.fr/#start';">&#11014;</button>
