--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Contact | mthillayisnard.fr</title>
-        <link rel="stylesheet" href="style-contact.css">
+        <link rel="stylesheet" href="/data/style/style-contact.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     </head>
