ajout lien sur les boutons behance project card

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -52,7 +52,7 @@
         <div class="project_card1">
             <div class="buttonDB">
                 <button class="btn_dec">Découvrir le projet</button>
-                <button class="btn_behance">Behance</button>
+                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
             </div>
         </div>
         <div class="project_card2">
@@ -63,7 +63,7 @@
         <div class="project_card3">
             <div class="buttonDB">
                 <button class="btn_dec">Découvrir le projet</button>
-                <button class="btn_behance">Behance</button>
+                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
             </div>
         </div>
         <div class="project_card4">
@@ -74,7 +74,7 @@
         <div class="project_card5">
             <div class="buttonDB">
                 <button class="btn_dec">Découvrir le projet</button>
-                <button class="btn_behance">Behance</button>
+                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
             </div>
         </div>
         <div class="project_card6">
