Ajout gfa.html + style-GFA.css + nav.css + nav.html Remplacement de toutes les nav barre par le fichier nav.html

--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -11,14 +11,7 @@
     <body>
         <div class="fjaune">
             <nav>
-                <button class="nav-btn-txt" onclick="window.location.href='index.html';">Mes projets</button>
-                <button class="nav-btn-txt" onclick="window.location.href='qui_suis-je.html';">Qui suis-je ?</button>
-                <button class="nav-btn-txt" onclick="window.location.href='contact.html';">Contact</button>
-                <a href="data/other/CV - MANON THILLAY ISNARD - UIUX DESIGN.pdf">
-                    <button class="btn-cv">Mon CV</button>
-                </a>
-                <button class="btn-behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';"><img src="data/imgs/logo-behance.png" alt="logo behance"></button>
-                <button class="btn-linkedin" onclick="window.location.href='https://fr.linkedin.com/in/manon-thillay-isnard-11b251173';"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button>
+                <iframe src="nav.html" frameborder="0" width="100%" height=""></iframe>
             </nav>
             <footer>
                 <p class="p-footer">@mthillayisnard <script>document.write(new Date().getFullYear())</script></p>
