--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     </head>
     <body>
         <div class="fjaune" id="start">
-            <nav>
-                <iframe src="nav.html" frameborder="0" width="100%" height=""></iframe>
-            </nav>
+            <include src="nav.html"></include>
 
             <div class="container-header">
                 <div class="header">
