--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <div class="fjaune" id="start">
-            <include src="nav.html"></include>
+            <iframe src="nav.html" frameborder="0" scrolling="no" width="100%" height=""></iframe>
 
             <div class="container-header">
                 <div class="header">
