--- a/gfa.html
+++ b/gfa.html
@@ -6,36 +6,39 @@
     <title>GFA Funding</title>
     <link rel="stylesheet" href="data/style/style-GFA.css">
 </head>
+
 <body>
-    
-    <div class="GFA">
+    <div class="header-background">
         <iframe src="nav.html" frameborder="0" width="100%" height=""></iframe>
-        <div class="GFA_titre">
-            <div class="text_le_projet">
+        <div class="header">
+            <div class="box-top-header">
                 <p class="le">le</p>
                 <p class="create_logo">projet de création de logo</p>
             </div>
-            <div class="text_GFA_Funding">
-                <p class="GFA_Funding">GFA Funding</p>
+            <div class="box-header-bot">
+                <h1 class="GFA_Funding">GFA Funding</h1>
             </div>
         </div>
-
         <table class="t1">
             <tr>
                 <th>R&#233;sum&#233;/brief</th>
-              <th>&Eacute;quipe</th>
-              <th>Logiciels</th>
+                <th>&Eacute;quipe</th>
+                <th>Logiciels</th>
             </tr>
             <tr>
-                <td>Le brief est simple : cr&#233;er une identit&#233; visuelle &#224; un produit. Mais le produit est, lui, moins simple : une solution d&#8217;investissement pour la construction.  La difficult&#233; ici a &#233;t&#233; de rendre ce produit &#8220;sexy&#8221; et reconnaissable facilement. Je vous invite aujourd&#8217;hui &#224; suivre mon  precessus.</td>
-                <td>J&#8217;ai agi en tant que responsable du projet et est travaill&#233; en &#233;troite collaboration pour comprendre  le produit et le traduire &#224; travers une identit&#233; propre.</td>
-              <td>Illustrator<br>
-                InDesign <br>
-                Pinterest<br>
-                Behance<br>
-                Procreate</td>
+                <td>Le brief est simple : cr&#233;er une identit&#233; visuelle &#224; un produit. Mais le produit est,
+                    lui, moins simple : une solution d&#8217;investissement pour la construction. La difficult&#233; ici
+                    a &#233;t&#233; de rendre ce produit &#8220;sexy&#8221; et reconnaissable facilement. Je vous invite
+                    aujourd&#8217;hui &#224; suivre mon precessus.</td>
+                <td>J&#8217;ai agi en tant que responsable du projet et est travaill&#233; en &#233;troite collaboration
+                    pour comprendre le produit et le traduire &#224; travers une identit&#233; propre.</td>
+                <td>Illustrator<br>
+                    InDesign <br>
+                    Pinterest<br>
+                    Behance<br>
+                    Procreate</td>
             </tr>
-          </table>
+        </table>
     </div>
     <div class="black">
         <div class="box-h2projet">
@@ -44,18 +47,23 @@
             </div>
             <h2 class="projet">
                 projet
-            </h2><br>
+            </h2>
         </div>
-        <div class="comprendre_GFA">Comme mes autres projets j’ai commencé par comprendre ce qu’est la GFA... Et on va dire que ça n’a pas été le sujet le plus facile que j’ai pu avoir. Mais c’est ça qui est intéressant dans ce genre de projets. </div>
+        <div class="comprendre_GFA">Comme mes autres projets j’ai commencé par comprendre ce qu’est la GFA... Et on va
+            dire que ça n’a pas été le sujet le plus facile que j’ai pu avoir. Mais c’est ça qui est intéressant dans ce
+            genre de projets. </div>
         <div class="box-h2projet">
             <div class="box-le">
                 <p class="txt-le">les</p>
             </div>
             <h2 class="projet">
                 esquisses
-            </h2><br>
+            </h2>
         </div>
-        <div class="comprendre_GFA">J’ai commencé en griffonnant sur mon carnet différentes idées pour le logo. En y regardant de plus près, c’est un logo plus en longueur et se lisant de gauche à droite qui paraissait le plus cohérent. Après avoir validé avec les équipes, j’ai décidé de réfléchir plus en profondeur à ce logo.</div>
+        <div class="comprendre_GFA">J’ai commencé en griffonnant sur mon carnet différentes idées pour le logo. En y
+            regardant de plus près, c’est un logo plus en longueur et se lisant de gauche à droite qui paraissait le
+            plus cohérent. Après avoir validé avec les équipes, j’ai décidé de réfléchir plus en profondeur à ce logo.
+        </div>
         <img class="img_feuille" src="data/imgs/img-manon-feuille.png" alt="">
 
         <div class="box-h2projet">
@@ -64,18 +72,21 @@
             </div>
             <h2 class="projet">
                 couleurs
-            </h2><br>
+            </h2>
         </div>
-        <div class="comprendre_GFA">Pour les couleurs, pas grand chose n’est laissé à l’imagination. En effet, je dois partir des couleurs de l’entité et rester dans les mêmes tons.  </div>
+        <div class="comprendre_GFA">Pour les couleurs, pas grand chose n’est laissé à l’imagination. En effet, je dois
+            partir des couleurs de l’entité et rester dans les mêmes tons. </div>
         <div class="box-h2projet">
             <div class="box-le">
                 <p class="txt-le">les</p>
             </div>
             <h2 class="projet">
                 croquis
-            </h2><br>
+            </h2>
         </div>
-        <div class="comprendre_GFA">Fini les esquisses et bonjour les croquis, à l’aide de ma tablette et de l’application procreate j’ai créer une version plus abouti à présenter aux équipes.</div>
+        <div class="comprendre_GFA">Fini les esquisses et bonjour les croquis, à l’aide de ma tablette et de
+            l’application procreate j’ai créer une version plus abouti à présenter aux équipes.</div>
     </div>
 </body>
+
 </html>
