changement width colum gfa

--- a/gfa.html
+++ b/gfa.html
@@ -21,9 +21,9 @@
         </div>
         <table class="t1">
             <tr>
-                <th>R&#233;sum&#233;/brief</th>
-                <th>&Eacute;quipe</th>
-                <th>Logiciels</th>
+                <th style="width:45%">R&#233;sum&#233;/brief</th>
+                <th style="width:35%">&Eacute;quipe</th>
+                <th style="width:20%">Logiciels</th>
             </tr>
             <tr>
                 <td>Le brief est simple : cr&#233;er une identit&#233; visuelle &#224; un produit. Mais le produit est,
