--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,9 @@
 <link href="data/style/nav.css" rel="stylesheet">
 <nav>
-    <a href="https://mthillayisnard.fr/index.html" target="_blank"><button class="nav-btn-txt">Mes projets</button></a>
-    <a href="https://mthillayisnard.fr/qui_suis-je.html" target="_blank"><button class="nav-btn-txt">Qui suis-je ?</button></a>
-    <a href="https://mthillayisnard.fr/contact.html" target="_blank"><button class="nav-btn-txt">Contact</button></a>
-    <a href="https://mthillayisnard.fr/data/other/CV%20-%20MANON%20THILLAY%20ISNARD%20-%20UIUX%20DESIGN.pdf" target="_blank"><button class="btn-cv">Mon CV</button></a>
+    <a href="index.html" target="_blank"><button class="nav-btn-txt">Mes projets</button></a>
+    <a href="qui_suis-je.html" target="_blank"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+    <a href="contact.html" target="_blank"><button class="nav-btn-txt">Contact</button></a>
+    <a href="data/other/CV%20-%20MANON%20THILLAY%20ISNARD%20-%20UIUX%20DESIGN.pdf" target="_blank"><button class="btn-cv">Mon CV</button></a>
     <a href="https://www.behance.net/mthillayisnard" target="_blank"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
     <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173" target="_blank"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
 </nav>
