--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="container">
         <div class="project_card1">
             <div class="buttonDB">
-                <button class="btn_dec" onclick="window.location.href='gfa.html';">Découvrir le projet</button>
+                <button class="btn_dec" onclick="window.location.href='https://mthillayisnard.fr/gfa.html';">Découvrir le projet</button>
                 <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
             </div>
         </div>
