--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,5 @@
 <link href="data/style/nav.css" rel="stylesheet">
+<link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <nav>
     <a href="index.html" target="_blank"><button class="nav-btn-txt">Mes projets</button></a>
     <a href="qui_suis-je.html" target="_blank"><button class="nav-btn-txt">Qui suis-je ?</button></a>
