--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
                             <h1 class="horizontal-h1">Manon</h1>
                         </div>
                         <div class="button-container">
-                            <button>web design</button>
-                            <button class="btn-2-acc">UI design</button>
+                            <button>UI/UX Design</button>
+                            <button class="btn-2-acc">Web Design</button>
+                            <button class="btn-2-acc">Gestion de projet</button>
                         </div>
                     </div>
                 </div>
