--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 <div class="container">
         <div class="project_card1">
             <div class="buttonDB">
-                <button class="btn_dec" onclick="window.location.href='https://mthillayisnard.fr/gfa.html';">Découvrir le projet</button>
-                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
+                <button class="btn_dec" onclick="window.location.href='https://mthillayisnard.fr/gfa.html';">D&eacute;couvrir le projet</button>
+                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit';">Behance</button>
             </div>
         </div>
         <div class="project_card2">
@@ -57,8 +57,8 @@
         </div><br>
         <div class="project_card3">
             <div class="buttonDB">
-                <button class="btn_dec">Découvrir le projet</button>
-                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
+                <button class="btn_dec" onclick="window.location.href='https://mthillayisnard.fr/leria.html';">D&eacute;couvrir le projet</button>
+                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/gallery/168336175/LERIA-Cration-de-site-web';">Behance</button>
             </div>
         </div>
         <div class="project_card4">
@@ -68,7 +68,7 @@
         </div><br>
         <div class="project_card5">
             <div class="buttonDB">
-                <button class="btn_dec">Découvrir le projet</button>
+                <button class="btn_dec" onclick="window.location.href='#';">D&eacute;couvrir le projet</button>
                 <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
             </div>
         </div>
