correction sur index

--- a/index.html
+++ b/index.html
@@ -1,93 +1,105 @@
 <!DOCTYPE html>
 <html lang="frfr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
-        <title>Accueil | mthillayisnard.fr</title>
-        <link rel="stylesheet" href="data/style/style-index.css">
-        <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-        <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-        <button id="return_button" class="return_button" onclick="window.location.href='#start';">&#11014;</button>
-    </head>
-    <body>
-        <div class="fjaune" id="start">
-            <iframe src="nav.html" frameborder="0" scrolling="no" width="100%" height=""></iframe>
 
-            <div class="container-header">
-                <div class="header">
-                    <div class="header-column-left">
-                        <img src="data/imgs/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Accueil | mthillayisnard.fr</title>
+    <link rel="stylesheet" href="data/style/style-index.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+    <button id="return_button" class="return_button" onclick="window.location.href='#start';"><img
+            src="data/imgs/return-arrow.png" class="return-arrow" alt="retour en haut de la page"></button>
+</head>
+
+<body>
+    <div class="fjaune" id="start">
+        <iframe src="nav.html" frameborder="0" scrolling="no" width="100%" height=""></iframe>
+
+        <div class="container-header">
+            <div class="header">
+                <div class="header-column-left">
+                    <img src="data/imgs/img-manon-acc.png" alt="Image de Manon Thillay-Isnard" class="img-manon-acc">
+                </div>
+                <div class="header-column-right">
+                    <h2 class="hello">Hello,</h2>
+                    <div class="vertical-p-container">
+                        <p class="vertical-p">je suis</p>
+                        <h1 class="horizontal-h1">Manon</h1>
                     </div>
-                    <div class="header-column-right">
-                        <h2 class="hello">Hello,</h2>
-                        <div class="vertical-p-container">
-                            <p class="vertical-p">je suis</p>
-                            <h1 class="horizontal-h1">Manon</h1>
-                        </div>
-                        <div class="button-container">
-                            <button>UI/UX Design</button>
-                            <button class="btn-2-acc">Web Design</button>
-                            <button class="btn-2-acc">Gestion de projet</button>
-                        </div>
+                    <div class="button-container">
+                        <button>UI/UX Design</button>
+                        <button class="btn-2-acc">Web Design</button>
+                        <button class="btn-2-acc">Gestion de projet</button>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="fdarkgrey">
-            <div class="box-h2projet">
-                <div class="box-mes">
-                    <p class="txt-mes">mes</p>
-                </div>
-                <h2 class="projets">
-                    projets
-                </h2>
-            </div>
-                <div class="container">
-        <div class="project_card1">
-            <div class="buttonDB">
-                <button class="btn_dec" onclick="window.location.href='https://mthillayisnard.fr/gfa.html';">D&eacute;couvrir le projet</button>
-                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit';">Behance</button>
-            </div>
-        </div>
-        <div class="project_card2">
-            <div class="buttonC">
-                <button class="btn_coming">Coming soon</button>
-            </div>
-        </div><br>
-        <div class="project_card3">
-            <div class="buttonDB">
-                <button class="btn_dec" onclick="window.location.href='https://mthillayisnard.fr/leria.html';">D&eacute;couvrir le projet</button>
-                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/gallery/168336175/LERIA-Cration-de-site-web';">Behance</button>
-            </div>
-        </div>
-        <div class="project_card4">
-            <div class="buttonC">
-                <button class="btn_coming">Coming soon</button>
-            </div>
-        </div><br>
-        <div class="project_card5">
-            <div class="buttonDB">
-                <button class="btn_dec" onclick="window.location.href='#';">D&eacute;couvrir le projet</button>
-                <button class="btn_behance" onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
-            </div>
-        </div>
-        <div class="project_card6">
-            <div class="buttonC">
-                <button class="btn_coming">Coming soon</button>
             </div>
         </div>
     </div>
+    <div class="fdarkgrey">
+        <div class="box-h2projet">
+            <div class="box-mes">
+                <p class="txt-mes">mes</p>
+            </div>
+            <h2 class="projets">
+                projets
+            </h2>
         </div>
-        <footer>
-            <p class="p-footer">@mthillayisnard <script>document.write(new Date().getFullYear())</script></p>
-            <br>
-            <a href=""><img src="data/imgs/logo-behance-noir.png" class="img-footer"></a>
-            <a href=""><img src="data/imgs/logo-linkedin-noir.png" class="img-footer"></a>
-        </footer>
-    </body>
+        <div class="container-project-card">
+            <div class="project_card1">
+                <div class="buttonDB">
+                    <button class="btn_dec"
+                        onclick="window.location.href='https://mthillayisnard.fr/gfa.html';">D&eacute;couvrir le
+                        projet</button>
+                    <button class="btn_behance"
+                        onclick="window.location.href='https://www.behance.net/gallery/167983107/GFA-Funding-Cration-didentit';">Behance</button>
+                </div>
+            </div>
+            <div class="project_card2">
+                <div class="buttonC">
+                    <button class="btn_coming">Coming soon</button>
+                </div>
+            </div><br>
+            <div class="project_card3">
+                <div class="buttonDB">
+                    <button class="btn_dec"
+                        onclick="window.location.href='https://mthillayisnard.fr/leria.html';">D&eacute;couvrir le
+                        projet</button>
+                    <button class="btn_behance"
+                        onclick="window.location.href='https://www.behance.net/gallery/168336175/LERIA-Cration-de-site-web';">Behance</button>
+                </div>
+            </div>
+            <div class="project_card4">
+                <div class="buttonC">
+                    <button class="btn_coming">Coming soon</button>
+                </div>
+            </div><br>
+            <div class="project_card5">
+                <div class="buttonDB">
+                    <button class="btn_dec" onclick="window.location.href='#';">D&eacute;couvrir le projet</button>
+                    <button class="btn_behance"
+                        onclick="window.location.href='https://www.behance.net/mthillayisnard';">Behance</button>
+                </div>
+            </div>
+            <div class="project_card6">
+                <div class="buttonC">
+                    <button class="btn_coming">Coming soon</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p class="p-footer">@mthillayisnard
+            <script>document.write(new Date().getFullYear())</script>
+        </p>
+        <br>
+        <a href=""><img src="data/imgs/logo-behance-noir.png" class="img-footer"></a>
+        <a href=""><img src="data/imgs/logo-linkedin-noir.png" class="img-footer"></a>
+    </footer>
+</body>
 <script>
-    setInterval(function() {
+    setInterval(function () {
         var button = document.getElementById('return_button');
         if (window.scrollY > window.innerHeight) {
             button.classList.add('visible');
