modif card, btn, js...

--- a/gfa.html
+++ b/gfa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GFA Funding</title>
-    <link rel="stylesheet" href="data/style/style-GFA.css">
+    <link rel="stylesheet" href="data/css/style-GFA.css">
 </head>
 
 <body>
