--- a/leria.html
+++ b/leria.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leria</title>
-    <link rel="stylesheet" href="data/style/style-Leria.css">
+    <link rel="stylesheet" href="data/css/style-Leria.css">
 </head>
 
 <body>
