--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,8 @@
-<link href="data/style/nav.css" rel="stylesheet">
+<link href="data/css/nav.css" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 <nav>
-    <a href="index.html" target="_blank"><button class="nav-btn-txt">Mes projets</button></a>
+    <a href="index.html" target="_blank"><button class="nav-btn-txt">Accueil</button></a>
+    <a href="index.html#projets" target="_blank"><button class="nav-btn-txt">Mes projets</button></a>
     <a href="qui_suis-je.html" target="_blank"><button class="nav-btn-txt">Qui suis-je ?</button></a>
     <a href="contact.html" target="_blank"><button class="nav-btn-txt">Contact</button></a>
     <a href="data/other/CV%20-%20MANON%20THILLAY%20ISNARD%20-%20UIUX%20DESIGN.pdf" target="_blank"><button class="btn-cv">Mon CV</button></a>
