nav bar dans chaque page

--- a/gfa.html
+++ b/gfa.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
 <html lang="frfr">
 <head>
+    <title>GFA Funding</title>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFA Funding</title>
+
     <link rel="stylesheet" href="data/css/style-GFA.css">
+    <link rel="stylesheet" href="data/css/nav.css">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
 </head>
 
 <body>
     <div class="header-background">
-        <iframe src="nav.html" frameborder="0" width="100%" height=""></iframe>
+        <nav>
+            <a href="index.html"><button class="nav-btn-txt">Accueil</button></a>
+            <a href="index.html#projets"><button class="nav-btn-txt">Mes projets</button></a>
+            <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
+            <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
+            <a href="data/other/CV%20-%20MANON%20THILLAY%20ISNARD%20-%20UIUX%20DESIGN.pdf"><button class="btn-cv">Mon CV</button></a>
+            <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
+            <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
+        </nav>
+        
         <div class="header">
             <div class="box-top-header">
                 <p class="le">le</p>
