modifs return arrow

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="data/js/script-index.js"></script>
 
     <button id="return_button" class="return_button" onclick="window.location.href='#start';">
-        <img src="data/imgs/return-arrow.png" class="return-arrow" alt="retour en haut de la page">
+        <img src="data/imgs/return-arrow.svg" class="return-arrow" alt="retour en haut de la page">
     </button>
 </head>
 
