--- a/leria.html
+++ b/leria.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="mti.png" type="image/x-icon">
     <link rel="stylesheet" href="data/css/style-Leria.css">
     <link rel="stylesheet" href="data/css/nav.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
