--- a/qui_suis-je.html
+++ b/qui_suis-je.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="shortcut icon" href="mti.png" type="image/x-icon">
+        <link rel="shortcut icon" href="data/imgs/MTI.png" type="image/x-icon">
         <link rel="stylesheet" href="data/css/style-qui_suis-je.css">
         <link rel="stylesheet" href="data/css/nav.css">
         <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
@@ -19,7 +19,7 @@
                 <a href="index.html#projets"><button class="nav-btn-txt">Mes projets</button></a>
                 <a href="qui_suis-je.html"><button class="nav-btn-txt">Qui suis-je ?</button></a>
                 <a href="contact.html"><button class="nav-btn-txt">Contact</button></a>
-                <a href="data/other/CV%20-%20MANON%20THILLAY%20ISNARD%20-%20UIUX%20DESIGN.pdf"><button class="btn-cv">Mon CV</button></a>
+                <a href="data/other/CV_-_Manon_THILLAY-ISNARD_-_UXUI_Designer.pdf"><button class="btn-cv">Mon CV</button></a>
                 <a href="https://www.behance.net/mthillayisnard"><button class="btn-behance"><img src="data/imgs/logo-behance.png" alt="logo behance"></button></a>
                 <a href="https://fr.linkedin.com/in/manon-thillay-isnard-11b251173"><button class="btn-linkedin"><img src="data/imgs/logo-linkedin.png" alt="logo linkedin"></button></a>
             </nav>
