début changement card, dossiers pour les imgs

--- a/index.html
+++ b/index.html
@@ -54,49 +54,37 @@
             </div>
         </div>
     </div>
-    <div class="fdarkgrey">
-        <div class="box-h2projet">
-            <div class="box-mes">
-                <p class="txt-mes">mes</p>
+    <div class="f-project">
+        <div class="container-projects-cards">
+            <div class="box-card-1">
+                <div class="project_card1"></div>
+                <h3 class="project-title"></h3>
+                <p class="project-subtitle"></p>
             </div>
-            <h2 class="projets" id="projets">
-                projets
-            </h2>
-        </div>
-        <div class="container-project-card">
-            <div class="project_card1">
-                <div class="buttonDB">
-                    <button class="btn_dec"
-                        onclick="window.location.href='https://mthillayisnard.fr/gfa.html';">D&eacute;couvrir le
-                        projet</button>
-                </div>
+            <div class="box-card-2">
+                <div class="project_card2"></div>
+                <h3 class="project-title"></h3>
+                <p class="project-subtitle"></p>
             </div>
-            <div class="project_card2">
-                <div class="buttonC">
-                    <button class="btn_coming">Coming soon</button>
-                </div>
-            </div><br>
-            <div class="project_card3">
-                <div class="buttonDB">
-                    <button class="btn_dec"
-                        onclick="window.location.href='https://mthillayisnard.fr/leria.html';">D&eacute;couvrir le
-                        projet</button>
-                </div>
+            <div class="box-card-3">
+                <div class="project_card3"></div>
+                <h3 class="project-title"></h3>
+                <p class="project-subtitle"></p>
             </div>
-            <div class="project_card4">
-                <div class="buttonC">
-                    <button class="btn_coming">Coming soon</button>
-                </div>
-            </div><br>
-            <div class="project_card5">
-                <div class="buttonDB">
-                    <button class="btn_dec" onclick="window.location.href='#';">D&eacute;couvrir le projet</button>
-                </div>
+            <div class="box-card-4">
+                <div class="project_card4"></div>
+                <h3 class="project-title"></h3>
+                <p class="project-subtitle"></p>
             </div>
-            <div class="project_card6">
-                <div class="buttonC">
-                    <button class="btn_coming">Coming soon</button>
-                </div>
+            <div class="box-card-5">
+                <div class="project_card5"></div>
+                <h3 class="project-title"></h3>
+                <p class="project-subtitle"></p>
+            </div>
+            <div class="box-card-6">
+                <div class="project_card6"></div>
+                <h3 class="project-title"></h3>
+                <p class="project-subtitle"></p>
             </div>
         </div>
     </div>
